--- a/Strength.html
+++ b/Strength.html
@@ -48,15 +48,29 @@
                         <div class="modal-header">
                             <h3 style="text-align: center" class="modal-title" id="myModalLabe4">公司简介</h3>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body" style="font-size:16px;text-indent: 2em;">
                             根据十八大报告精神，城镇化未来将成为中国全面建设小康社会的重要载体，更是撬动内需的最大潜力所在。
-                            北京元融商业管理有限公司正是在这样的政策背景下聚集了一群有愿景、有使命的“优质人”，坚持以《国家新型城镇化规划》为政策指导，
-                            整合海内外一流的商业管理理念与优质资源，打造国际一流的
-                            商业综合服务体系平台。
-                            <p style="font-size:15px;text-indent: 2em;color:#444444;text-align: left;">
-                                北京元融商业管理有限公司(以下简称“元融商业”），是一家以商业服务为主导，专注于零售业销售解决方案服务领域，依托“元融云计划数据中心”，通过强大的商业资本运作，助推零售行业健康成长的一家多元化商业综合管理有限公司，注册资金5000万元。总部设在北京，旗下拥有40余家控股企业，业务涵盖食品制造、食品进出口贸易、商业投融资、文化娱乐、IT研发等。元融商业汇聚了商业管理、食品安全生产、IT、数据安全、投资管理、文化创意产业等多方面高端人才。拥有一支由资深专业人士组成的商业管理运营团队、企业投资管理团队、食品安全生产团队、快消零售终端运营团队、IT技术研发团队。团队成员大多在大型企业和国内外知名商业、金融、食品生产、文化创意、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际成功投资项目，在商业运营、投资管理、企业电商、食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。元融商业深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆做出前瞻性判断，运用现代技术手段，整合市场信息资源，激活食品生产资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。目前，元融商业已经拥有北京世纪元融酒业有限公司、元融控股公司等多家全资子公司及40多家控股生产企业，同时与中国平安银行达成实质性战略联盟合作意向。经过短短一年的努力，元融商业仅在北京已经拥有20000多家社区零售会员店，并与200多家食品、日化、调料、糕点、酒水等生产厂家建立了合作伙伴关系。在北京城区建立了4个总库、40个分库，配备了160辆运送车，月订货配送量达3800多万元，现有员工200多人。元融商业已面向全国展开投融资战略布局，计划在三年内覆盖全国88个人口在500万以上的一、二、三线城市。届时，元融商业将会拥有50万个零售终端会员店和2万个元融品牌直营标准店；扶持并控股100多个名优特食品生产企业；根植于实业体系建立“元融云计划数据中心”，实现管理资产过百亿。未来，元融商业将一直秉承和践行“细、情、势”的企业精神，以“诚信、共赢”为企业信仰，积极拓展渠道，创新服务模式，关注中国未来商业体系的发展，助推零售行业健康成长。
+                            北京元融商业管理有限公司正是在这样的政策背景下聚集了一群有愿景、有使命的“优质人”，坚持以《国家新型城镇化规划》为指导，
+                            整合海内外一流的商业管理理念与优质资源，打造国际一流的<mark>商业综合服务</mark>平台。
+                            <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
+                                北京元融商业管理有限公司(以下简称"元融")，是一家以商业服务为主导，专注于零售业销售解决方案服务领域，依托“元融云计划数据中心”，通过强大的商业资本运作和构架持续优化的商品流通体系，助推零售行业健康成长的一家多元化商业综合服务公司，注册资金5000万元，总部设在北京，业务涵盖食品制造、食品进出口贸易、商业投融资、IT研发等。
                             </p>
+                            <span id="show" style="display: none;">
+                                 <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
+                                    元融汇聚了商业管理、食品安全生产、IT、数据安全、投资管理等多方面高端人才。拥有一支由资深专业人士组成的<mark>商业管理</mark>运营团队、企业<mark>投资管理</mark>团队、<mark>食品安全</mark>生产团队、<mark>零售终端</mark>运营团队、<mark>IT技术研发</mark>团队。团队成员大多在大型企业和国内外知名商业、金融、食品生产、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际重大投资项目，在商业运营、投资管理、<mark>企业电商、</mark>食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。
+                                </p>
+                                <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
+                                    元融深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆做出前瞻性判断，运用现代技术手段，整合市场信息资源，激活<mark>食品生产</mark>资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。
+                                </p>
+                                <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
+                                    目前，元融已经拥有北京世纪<mark>元融酒业</mark>有限公司、<mark>元融控股</mark>公司等多家全资子公司及20多家控股生产企业，同时与中国平安银行达成实质性战略联盟合作意向。经过短短一年的努力，元融在北京已经拥有<mark>2万</mark>多家社区零售会员店，并与200多家食品、日化、调料、糕点、酒水等生产厂家建立了合作伙伴关系。在北京城区建立了4个总库、40个分库，配备了160辆运送车，月订货配送量达3800多万元，现有员工200多人。
+                                </p>
+                                <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
+                                    元融已面向全国展开战略布局，计划在三年内覆盖全国88个人口在500万以上的一、二、三线城市。届时，元融将会拥有<mark>50万</mark>个零售终端会员店和<mark>2万</mark>个元融品牌标准店，扶持并控股<mark>100多个</mark>食品生产企业。根植于实业体系建立“元融云计划数据中心”，实现管理资产过百亿。未来，元融将一直秉承和践行“细、情、势”的企业精神，以“诚信、共赢”为企业信仰，紧跟中国未来商业体系的发展，积极拓展渠道，创新服务模式，助推零售行业健康成长。
+                                </p>
+                            </span>
                         </div>
+                        <p id="display" class="display">展开</p>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                         </div>
@@ -85,7 +99,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active" align="center">
-                <img class="lazy" data-original="style/img/banner4.png" alt="">
+                <img src="style/img/banner4.png" class="lazy" data-original="style/img/banner4.png" alt="">
                 <div class="carousel-caption">
                     ...
                 </div>
@@ -119,22 +133,22 @@
             <h2 id="link" style="font-weight: 500;">会员店展示</h2>
             <ul class="row">
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/a.png"/>
+                    <img src="style/img/a.png" class="lazy" data-original="style/img/a.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/q.png"/>
+                    <img src="style/img/q.png" class="lazy" data-original="style/img/q.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/qqwq.png"/>
+                    <img src="style/img/qqwq.png" class="lazy" data-original="style/img/qqwq.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/uuy.png"/>
+                    <img src="style/img/uuy.png" class="lazy" data-original="style/img/uuy.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/w.png"/>
+                    <img src="style/img/w.png" class="lazy" data-original="style/img/w.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/www.png"/>
+                    <img src="style/img/www.png" class="lazy" data-original="style/img/www.png"/>
                 </li>
             </ul>
         </div>
@@ -142,49 +156,49 @@
             <h2 id="link" style="font-weight: 500;">商品展示</h2>
             <ul class="row">
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/ccc.png"/>
+                    <img src="style/img/ccc.png" class="lazy" data-original="style/img/ccc.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/d.png"/>
+                    <img src="style/img/d.png" class="lazy" data-original="style/img/d.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/dd.png"/>
+                    <img src="style/img/dd.png" class="lazy" data-original="style/img/dd.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/ddd.png"/>
+                    <img src="style/img/ddd.png" class="lazy" data-original="style/img/ddd.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/dddd.png"/>
+                    <img src="style/img/dddd.png" class="lazy" data-original="style/img/dddd.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/e.png"/>
+                    <img src="style/img/e.png" class="lazy" data-original="style/img/e.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/ee.png"/>
+                    <img src="style/img/ee.png" class="lazy" data-original="style/img/ee.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/eee.png"/>
+                    <img src="style/img/eee.png" class="lazy" data-original="style/img/eee.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/eeee.png"/>
+                    <img src="style/img/eeee.png" class="lazy" data-original="style/img/eeee.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/gg.png"/>
+                    <img src="style/img/gg.png" class="lazy" data-original="style/img/gg.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/ggg.png"/>
+                    <img src="style/img/ggg.png" class="lazy" data-original="style/img/ggg.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/r.png"/>
+                    <img src="style/img/r.png" class="lazy" data-original="style/img/r.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/rr.png"/>
+                    <img src="style/img/rr.png" class="lazy" data-original="style/img/rr.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/rrr.png"/>
+                    <img src="style/img/rrr.png" class="lazy" data-original="style/img/rrr.png"/>
                 </li>
                 <li class="col-md-4">
-                    <img class="lazy" data-original="style/img/rrrr.png"/>
+                    <img src="style/img/rrrr.png" class="lazy" data-original="style/img/rrrr.png"/>
                 </li>
             </ul>
         </div>
@@ -212,29 +226,12 @@
     </div>
 </footer>
 </body>
-<script src="lib/jquery.js"></script>
+<script src="lib/jquery-1.11.0.min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/current.js"></script>
 <script src="lib/jquery.lazyload.js?v=1.9.1"></script>
 <script src="lib/shiv.js"></script>
 <script src="http://www.lanrenzhijia.com/ajaxjs/lanrenzhijia.js"></script>
 <script src="http://zeptojs.com/zepto.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $('#nav_right .question').bind('click',function () {
-            $('#cs_box').show();
-        })
-    })
-    myEvent(window,'load',function(){
-        cs_box.set({
-            img_path : 'http://demo.lanrenzhijia.com/2014/service1119/images/lanrenzhijia.jpg',	//设置图片路径
-            qq : '123456789',	//设置QQ号码
-        });
-    });
-    $(function() {
-
-        $("img.lazy").lazyload({effect: "fadeIn"});
-
-    });
-</script>
+<script src="lib/public.js"></script>
 </html>
