--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
 </section>
 <section class="section-a">
-    <div class="background-img"></div>
+   <img src="style/img/bg.png"/>
 </section>
 <section class="section-b">
     <div class="container">
