--- a/Application.html
+++ b/Application.html
@@ -449,4 +449,9 @@
 <script src="lib/current.js"></script>
 <script src="lib/jquery.lazyload.js?v=1.9.1"></script>
 <script src="lib/shiv.js"></script>
+<script>
+    $(function (){
+        $("[data-toggle='popover']").popover();
+    });
+</script>
 <script src="http://www.lanrenzhijia.com/ajaxjs/lanrenzhijia.js"></script>
