--- a/Application.html
+++ b/Application.html
@@ -32,14 +32,14 @@
                 <li>
                     <a href="Application.html" class="current" title="申请条件与流程">申请条件与流程</a>
                 </li>
-                <li>
-                    <a href="Strength.html" title="实力展示">实力展示</a>
-                </li>
+                <!--<li>-->
+                    <!--<a href="Strength.html" title="实力展示">实力展示</a>-->
+                <!--</li>-->
             </ul>
             <div class="nav navbar-right nav_right" id="nav_right">
                 <a class="current company" href="#" data-toggle="modal" data-target="#myModal7">公司简介</a>
                 <a href="#" class="question">咨询留言</a>
-                <a href="#">加盟热线:400-000-0000</a>
+                <a href="#">加盟热线:400-040-5918</a>
             </div>
             <div class="theme-popover-mask"></div>
             <div class="modal fade" id="myModal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -428,10 +428,9 @@
             <div class="col-md-6">
                 <h3>一个源于商业管理与零售业销售的服务专家</h3>
                 <img src="style/img/111.png"/>
-                <h2>400-100-0000</h2>
+                <h2>400-040-5918</h2>
                 <p>联系我们：010-67617210</p>
-                <p>公司地址：北京市丰台区宋家庄地铁站G口出城乡开发大厦四层</p>
-                <p>招商部：18801032220</p>
+                <p>公司地址：北京市丰台区宋庄路甲一号楼4层</p>
                 <p>版权所有：北京元融商业管理有限公司</p>
             </div>
             <div class="col-md-6">
