--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                 <li>
                     <a href="Application.html" title="申请条件与流程">申请条件与流程</a>
                 </li>
-                <li>
-                    <a href="Strength.html" title="实力展示">实力展示</a>
-                </li>
+                <!--<li>-->
+                    <!--<a href="Strength.html" title="实力展示">实力展示</a>-->
+                <!--</li>-->
             </ul>
             <div class="nav navbar-right nav_right active" id="nav_right">
                 <a class="current" href="#" data-toggle="modal" data-target="#myModal4">公司简介</a>
                 <a href="#" class="question">咨询留言</a>
-                <a href="#">加盟热线:400-000-0000</a>
+                <a href="#">加盟热线:400-040-5918</a>
             </div>
         </div>
     </div>
@@ -154,7 +154,7 @@
             <p>☆元融将成熟的元融商业体系与元融特有的商业资源转让给加盟者，同时<mark>授权</mark>于加盟者在当地注册“北京元融商业管理（某地）分公司”，出具注册需要的必要资料。</p>
             <p>☆元融将在北京对加盟者进行专门<mark>培训</mark>，安排专业的培训师讲解元融运行管理模式，介绍元融服务保障理念，辅导初创期间<mark>滚动发展</mark>方法，组织到会员店、总库、分库及“会员采购中心”参观考察。</p>
             <p>☆公司将无偿<mark>提供</mark>从进、销、存到大小物流配送以至终端APP全套软件系统，并和公司的大系统进行对接。</p>
-            <p>☆元融对加盟者留有半个月的<mark>账期</mark>，即先发货后收钱，让加盟者没有进货的资金压力。</p>
+            <p>☆元融商业对加盟者留有半个月的<mark>账期</mark>，即先发货后收钱，让您没有首批进货的资金压力。</p>
             <p>☆在加盟者所在地区拥有一定规模的会员店（七大城市拥有15000家，省会城市拥有10000家，地区市拥有5000家）并进入正常运作后，由元融投资，在分公司所在地区会员店中按4%的比例，挑选拥有20平米地理位置优越的自有或长租（5年以上）店面且年利润在50万元以上的会员店升级为“元触标准店”。会员店升级，由元融免费装修门头、灯箱 、天花板、墙面、地板，配置崭新的货架、收银台，实行统一标准、统一色调、统一布局，以此提高品牌影响力，带动会员店销售。</p>
             <p>☆元融保证加盟者每年净利润不低于<mark>200万元</mark>。</p>
             <p>☆每个直辖市、省会城市和地区城市<mark>只设一个</mark>分公司，先加盟者占先机。</p>
@@ -328,10 +328,9 @@
             <div class="col-md-6">
                 <h3>一个源于商业管理与零售业销售的服务专家</h3>
                 <img src="style/img/111.png"/>
-                <h2>400-100-0000</h2>
+                <h2>400-040-5918</h2>
                 <p>联系我们：010-67617210</p>
-                <p>公司地址：北京市丰台区宋家庄地铁站G口出城乡开发大厦四层</p>
-                <p>招商部：18801032220</p>
+                <p>公司地址：北京市丰台区宋庄路甲一号楼4层</p>
                 <p>版权所有：北京元融商业管理有限公司</p>
             </div>
             <div class="col-md-6">
