--- a/Application.html
+++ b/Application.html
@@ -39,7 +39,8 @@
             <div class="nav navbar-right nav_right" id="nav_right">
                 <a class="current company" href="#" data-toggle="modal" data-target="#myModal7">公司简介</a>
                 <a href="#" class="question">咨询留言</a>
-                <a href="#">加盟热线:400-040-5918</a>
+                <a href="#">加盟热线:400-040-5918
+                </a>
             </div>
             <div class="theme-popover-mask"></div>
             <div class="modal fade" id="myModal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -334,8 +335,8 @@
                             </div>
                             <div class="modal-body" style="text-indent: 2em;">
                                 50万加盟费用：您在半年内每月营业额可达750万，每月毛利润达到112万；12个月内每月营业额达到1500万，每月毛利润达到230万。您每月的全部成本仅为120万，且进货货款我们元融商业留有半个月的账期。 第二年您全年的营业额可达1.8亿，毛利可达2700万，全年成本1500万。您的含税利润将超过1200万。<br>
-                                <p style="font-size:14px;color:#444444;text-align: left;">30万加盟费用：您在半年内每月营业额可达750万，每月毛利润达到75万；12个月内每月营业额达到1000万，每月毛利润达到150万。您每月的全部成本仅为63万，且进货货款我们元融商业留有半个月的账期。 第二年您全年的营业额可达1.2亿，毛利可达1800万，全年成本756万。您的含税利润将超过1000万。</p>
-                                <p style="font-size:14px;color:#444444;text-align: left;">20万加盟费用：您在半年内每月营业额可达250万，每月毛利润达到37.5万；12个月内每月营业额达到500万，每月毛利润达到70万。您每月的全部成本仅为25万，且进货货款我们元融商业留有半个月的账期。 第二年您全年的营业额可达6000亿，毛利可达900万，全年成本300万。您的含税利润将超过600万。</p>
+                                <p style="font-size:14px;color:#444444;text-align: left;"> 30万加盟费⽤用加盟商，会员店⽬目标为10000个，您在第⼀一个年年度营业额可达6500万，全年年⽑毛利利润达到975万，全年年的成本是760万，您在该年年度的含 税利利润在215万元以上；从第⼆二个年年度起，您每年年的营业额是1.2亿，⽑毛利利润达1800万，⼀一年年的成本是1100万，您每年年的含税利利润在700万以上。 </p>
+                                <p style="font-size:14px;color:#444444;text-align: left;">20万加盟费⽤用加盟商，会员店⽬目标为5000个，您在第⼀一个年年度营业额可达3250万，全年年⽑毛利利润达到487.5万，全年年的成本是432万，您在该年年度的 含税利利润在55万元以上；从第⼆二个年年度起，您每年年的营业额是6000万，⽑毛利利润达900万，⼀一年年的成本是620万，您每年年的含税利利润在280万以上。 </p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
