--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p>STRATEGY</p>
         <div class="content">
             <p class="text"> “一个源于商业管理与零售业销售的服务专家！”<span>北京元融商业管理有限公司（简称：元融）是一群有愿景、有使命的“优质人”所组成并发起，
-以商业管理服务为主导，专注于零售业销售解决方案服务领域，通过强大的商业资本运作和构架持续优化的商品流通体系，以线下<span style="font-weight: bold;">实体</span>为基础，以线上<span style="font-weight: bold;">大数据</span>为核心，依托“元融云计划数据中心”，展开面向全国的投融资战略布局，
+以商业管理服务为主导，专注于零售业销售解决方案服务领域，通过强大的商业资本运作和构架持续优化的商品流通体系，以线下<span style="font-weight: bold;">实体</span>为基础，以线上<span style="font-weight: bold;">大数据</span>为核心，依托“元融云计划数据中心”，展开面向全国的战略布局，
 计划在三年内形成覆盖全国大部分地区，拥有</span>50万个零售终端会员店、2万个元融品牌直营标准店，<span>扶持并控股</span>100多个食品生产企业，实现管理资产过百亿。</p>
         </div>
         <div class="title_icon">
