--- a/Application.html
+++ b/Application.html
@@ -169,9 +169,9 @@
                     <img src="style/img/s2.png" class="hide"/>
                     <button type="button" class="btn btn-warning" title="人员配置"
                             data-container="body" data-html="true" data-toggle="popover" data-placement="left"
-                            data-content="50万元加盟费的，分公司8人，业务员180人;<br>
-                                      30万元加盟费的，分公司8人，业务员100人;<br>
-                                      20万元加盟费的，分公司8人，业务员50人。">
+                            data-content="50万元加盟费的，员工188人;<br>
+                                      30万元加盟费的，员工108人;<br>
+                                      20万元加盟费的，员工58人。">
                     </button>
                      <button class="btn btn-warning" data-toggle="modal" data-target="#myModal1"></button>
                 </span>
@@ -262,9 +262,9 @@
                                 <h4 class="modal-title" id="myModalLabel">人员配置</h4>
                             </div>
                             <div class="modal-body">
-                                50万元加盟费的，分公司8人，业务员180人;<br>
-                                30万元加盟费的，分公司8人，业务员100人;<br>
-                                20万元加盟费的，分公司8人，业务员50人。
+                                50万元加盟费的，员工188人;<br>
+                                30万元加盟费的，员工108人;<br>
+                                20万元加盟费的，员工58人。
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -334,9 +334,9 @@
                                 <h4 class="modal-title" id="myModalLabel">利润</h4>
                             </div>
                             <div class="modal-body" style="text-indent: 2em;">
-                                50万加盟费用：您在半年内每月营业额可达750万，每月毛利润达到112万；12个月内每月营业额达到1500万，每月毛利润达到230万。您每月的全部成本仅为120万，且进货货款我们元融商业留有半个月的账期。 第二年您全年的营业额可达1.8亿，毛利可达2700万，全年成本1500万。您的含税利润将超过1200万。<br>
-                                <p style="font-size:14px;color:#444444;text-align: left;"> 30万加盟费⽤用加盟商，会员店⽬目标为10000个，您在第⼀一个年年度营业额可达6500万，全年年⽑毛利利润达到975万，全年年的成本是760万，您在该年年度的含 税利利润在215万元以上；从第⼆二个年年度起，您每年年的营业额是1.2亿，⽑毛利利润达1800万，⼀一年年的成本是1100万，您每年年的含税利利润在700万以上。 </p>
-                                <p style="font-size:14px;color:#444444;text-align: left;">20万加盟费⽤用加盟商，会员店⽬目标为5000个，您在第⼀一个年年度营业额可达3250万，全年年⽑毛利利润达到487.5万，全年年的成本是432万，您在该年年度的 含税利利润在55万元以上；从第⼆二个年年度起，您每年年的营业额是6000万，⽑毛利利润达900万，⼀一年年的成本是620万，您每年年的含税利利润在280万以上。 </p>
+                                50万加盟费用：您在半年内每月营业额可达750万，每月毛利润达到112万；12个月内每月营业额达到1500万，每月毛利润达到230万。您每月的全部成本仅为120万，且进货款我们元融商业留有半个月的账期。 第二年您全年的营业额可达1.8亿，毛利可达2700万，全年成本1500万。您的含税利润将超过1200万。<br>
+                                <p style="font-size:14px;color:#444444;text-align: left;"> 30万加盟费⽤用加盟商，会员店⽬目标为10000个，您在第一个年年度营业额可达6500万，全年毛利润达到975万，全年的成本是760万，您在该年度的含税利润在215万元以上；从第二个年度起，您每年的营业额是1.2亿，毛利润达1800万，一年的成本是1100万，您每年的含税利润在700万以上。 </p>
+                                <p style="font-size:14px;color:#444444;text-align: left;">20万加盟费⽤用加盟商，会员店⽬目标为5000个，您在第一个年年度营业额可达3250万，全年毛利润达到487.5万，全年的成本是432万，您在该年度的含税利润在55万元以上；从第二个年度起，您每年的营业额是6000万，毛利润达900万，一年的成本是620万，您每年的含税利润在280万以上。 </p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
