--- a/Application.html
+++ b/Application.html
@@ -58,10 +58,10 @@
                             </p>
                             <span id="show" style="display: none;">
                                  <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
-                                    元融汇聚了商业管理、食品安全生产、IT、数据安全、投资管理等多方面高端人才。拥有一支由资深专业人士组成的<mark>商业管理</mark>运营团队、企业<mark>投资管理</mark>团队、<mark>食品安全</mark>生产团队、<mark>零售终端</mark>运营团队、<mark>IT技术研发</mark>团队。团队成员大多在大型企业和国内外知名商业、金融、食品生产、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际重大投资项目，在商业运营、投资管理、<mark>企业电商、</mark>食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。
+                                    元融汇聚了商业管理、食品安全生产、IT、数据安全、投资管理等多方面高端人才。拥有一支由资深专业人士组成的<mark>商业管理</mark>运营团队、企业<mark>投资管理</mark>团队、<mark>食品安全</mark>生产团队、<mark>零售终端</mark>运营团队、<mark>IT技术研发</mark>团队。团队成员大多在国内外知名商业、金融、食品生产、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际重大投资项目，在商业运营、投资管理、<mark>企业电商、</mark>食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。
                                 </p>
                                 <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
-                                    元融深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆做出前瞻性判断，运用现代技术手段，整合市场信息资源，激活<mark>食品生产</mark>资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。
+                                    元融深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆作出前瞻性判断，运用现代技术手段，整合市场信息资源，激活<mark>食品生产</mark>资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。
                                 </p>
                                 <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
                                     目前，元融已经拥有北京世纪<mark>元融酒业</mark>有限公司、<mark>元融控股</mark>公司等多家全资子公司及20多家控股生产企业，同时与中国平安银行达成实质性战略联盟合作意向。经过短短一年的努力，元融在北京已经拥有<mark>2万</mark>多家社区零售会员店，并与200多家食品、日化、调料、糕点、酒水等生产厂家建立了合作伙伴关系。在北京城区建立了4个总库、40个分库，配备了160辆运送车，月订货配送量达3800多万元，现有员工200多人。
