--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <p>☆元融将成熟的元融商业体系与元融特有的商业资源转让给加盟者，同时<mark>授权</mark>于加盟者在当地注册“北京元融商业管理（某地）分公司”，出具注册需要的必要资料。</p>
             <p>☆元融将在北京对加盟者进行专门<mark>培训</mark>，安排专业的培训师讲解元融运行管理模式，介绍元融服务保障理念，辅导初创期间<mark>滚动发展</mark>方法，组织到会员店、总库、分库及“会员采购中心”参观考察。</p>
             <p>☆公司将无偿<mark>提供</mark>从进、销、存到大小物流配送以至终端APP全套软件系统，并和公司的大系统进行对接。</p>
-            <p>☆元融商业对加盟者留有半个月的<mark>账期</mark>，即先发货后收钱，让您没有首批进货的资金压力。</p>
+            <p>☆元融允许加盟者首单<mark>押批付款</mark>，即先发货后收钱，让您孵化期没有进货的资金压力。</p>
             <p>☆在加盟者所在地区拥有一定规模的会员店（七大城市拥有15000家，省会城市拥有10000家，地区市拥有5000家）并进入正常运作后，由元融投资，在分公司所在地区会员店中按4%的比例，挑选拥有20平米地理位置优越的自有或长租（5年以上）店面且年利润在50万元以上的会员店升级为“元触标准店”。会员店升级，由元融免费装修门头、灯箱 、天花板、墙面、地板，配置崭新的货架、收银台，实行统一标准、统一色调、统一布局，以此提高品牌影响力，带动会员店销售。</p>
             <p>☆元融保证加盟者每年净利润不低于<mark>200万元</mark>。</p>
             <p>☆每个直辖市、省会城市和地区城市<mark>只设一个</mark>分公司，先加盟者占先机。</p>
@@ -284,10 +284,10 @@
                                 </p>
                                 <span id="show" style="display: none;">
                                      <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
-                                        元融汇聚了商业管理、食品安全生产、IT、数据安全、投资管理等多方面高端人才。拥有一支由资深专业人士组成的<mark>商业管理</mark>运营团队、企业<mark>投资管理</mark>团队、<mark>食品安全</mark>生产团队、<mark>零售终端</mark>运营团队、<mark>IT技术研发</mark>团队。团队成员大多在大型企业和国内外知名商业、金融、食品生产、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际重大投资项目，在商业运营、投资管理、<mark>企业电商、</mark>食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。
+                                        元融汇聚了商业管理、食品安全生产、IT、数据安全、投资管理等多方面高端人才。拥有一支由资深专业人士组成的<mark>商业管理</mark>运营团队、企业<mark>投资管理</mark>团队、<mark>食品安全</mark>生产团队、<mark>零售终端</mark>运营团队、<mark>IT技术研发</mark>团队。团队成员大多在国内外知名商业、金融、食品生产、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际重大投资项目，在商业运营、投资管理、<mark>企业电商、</mark>食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。
                                     </p>
                                     <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
-                                        元融深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆做出前瞻性判断，运用现代技术手段，整合市场信息资源，激活<mark>食品生产</mark>资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。
+                                        元融深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆作出前瞻性判断，运用现代技术手段，整合市场信息资源，激活<mark>食品生产</mark>资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。
                                     </p>
                                     <p style="font-size:16px;text-indent: 2em;color:#444444;text-align: left;">
                                         目前，元融已经拥有北京世纪<mark>元融酒业</mark>有限公司、<mark>元融控股</mark>公司等多家全资子公司及20多家控股生产企业，同时与中国平安银行达成实质性战略联盟合作意向。经过短短一年的努力，元融在北京已经拥有<mark>2万</mark>多家社区零售会员店，并与200多家食品、日化、调料、糕点、酒水等生产厂家建立了合作伙伴关系。在北京城区建立了4个总库、40个分库，配备了160辆运送车，月订货配送量达3800多万元，现有员工200多人。
