--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <span class='cs_title'>咨询留言</span>
     <span class='cs_close'>X&nbsp;关闭</span>
     <div class='cs_img'>
-        <p>您好，欢迎您进入元融招商网站</p>
-        <p>元融为您服务！</p>
-        <img src="style/img/ren.png"/>
-        <div class='cs_btn'>点击咨询</div>
+        <!--<p>您好，欢迎您进入元融招商网站</p>-->
+        <!--<p>元融为您服务！</p>-->
+
     </div>
+    <div class='cs_btn'>点击咨询</div>
 </div>
 <article class="banner">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -154,7 +154,7 @@
             <p>☆元融将成熟的元融商业体系与元融特有的商业资源转让给加盟者，同时<mark>授权</mark>于加盟者在当地注册“北京元融商业管理（某地）分公司”，出具注册需要的必要资料。</p>
             <p>☆元融将在北京对加盟者进行专门<mark>培训</mark>，安排专业的培训师讲解元融运行管理模式，介绍元融服务保障理念，辅导初创期间<mark>滚动发展</mark>方法，组织到会员店、总库、分库及“会员采购中心”参观考察。</p>
             <p>☆公司将无偿<mark>提供</mark>从进、销、存到大小物流配送以至终端APP全套软件系统，并和公司的大系统进行对接。</p>
-            <p>☆元融允许加盟者首单<mark>押批付款</mark>，即先发货后收钱，让您孵化期没有进货的资金压力。</p>
+            <p>☆元融允许加盟者<mark>押批付款</mark>，最长账期为15天，即先发货后收钱，让加盟者孵化期没有进货的资金压力</p>
             <p>☆在加盟者所在地区拥有一定规模的会员店（七大城市拥有15000家，省会城市拥有10000家，地区市拥有5000家）并进入正常运作后，由元融投资，在分公司所在地区会员店中按4%的比例，挑选拥有20平米地理位置优越的自有或长租（5年以上）店面且年利润在50万元以上的会员店升级为“元触标准店”。会员店升级，由元融免费装修门头、灯箱 、天花板、墙面、地板，配置崭新的货架、收银台，实行统一标准、统一色调、统一布局，以此提高品牌影响力，带动会员店销售。</p>
             <p>☆元融保证加盟者每年净利润不低于<mark>200万元</mark>。</p>
             <p>☆每个直辖市、省会城市和地区城市<mark>只设一个</mark>分公司，先加盟者占先机。</p>
@@ -348,13 +348,13 @@
 <script src="lib/current.js"></script>
 <script src="lib/jquery.lazyload.js?v=1.9.1"></script>
 <script src="lib/shiv.js"></script>
-<script src="http://www.lanrenzhijia.com/ajaxjs/lanrenzhijia.js"></script>
+<script src="lib/cs_box.js"></script>
 <script src="lib/animatescroll.js"></script>
 <script src="lib/public.js"></script>
 <script>
     myEvent(window,'load',function(){
         cs_box.set({
-            img_path : 'http://demo.lanrenzhijia.com/2014/service1119/images/lanrenzhijia.jpg',	//设置图片路径
+            img_path :'style/img/ren.png',	//设置图片路径
             qq : '123456789',	//设置QQ号码
         });
     });
