--- a/Application.html
+++ b/Application.html
@@ -85,11 +85,11 @@
     <span class='cs_title'>咨询留言</span>
     <span class='cs_close'>X&nbsp;关闭</span>
     <div class='cs_img'>
-        <p>您好，欢迎您进入元融招商网站</p>
-        <p>元融为您服务！</p>
-        <img src="style/img/ren.png"/>
-        <div class='cs_btn'>点击咨询</div>
+        <!--<p>您好，欢迎您进入元融招商网站</p>-->
+        <!--<p>元融为您服务！</p>-->
+
     </div>
+    <div class='cs_btn'>点击咨询</div>
 </div>
 <article class="banner">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -449,13 +449,13 @@
 <script src="lib/current.js"></script>
 <script src="lib/jquery.lazyload.js?v=1.9.1"></script>
 <script src="lib/shiv.js"></script>
-<script src="http://www.lanrenzhijia.com/ajaxjs/lanrenzhijia.js"></script>
+<script src="lib/cs_box.js"></script>
 <script src="lib/animatescroll.js"></script>
 <script src="lib/public.js"></script>
 <script>
     myEvent(window,'load',function(){
         cs_box.set({
-            img_path : 'http://demo.lanrenzhijia.com/2014/service1119/images/lanrenzhijia.jpg',	//设置图片路径
+            img_path :'style/img/ren.png',	//设置图片路径
             qq : '123456789',	//设置QQ号码
         });
     });
